force-app/main/default/objects/MUSW__EventLog__c/MUSW__EventLog__c.object-meta.xml
<CustomObject>
    <description>This object is used to log the event for each action of users.</description>
    <label>Event Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>