force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Apex_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Apex_Code_Name__c</fullName>
    <description>It should be either Appex Class or Appex Trigger Name</description>
    <label>Apex Code Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>