force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Apex_Method__c</fullName>
    <description>The method name which is executed.</description>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>