force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Automation_Rule__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Automation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automation Rule</label>
    <referenceTo>MUSW__Automation_Rule__c</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>