force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Count__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Count__c</fullName>
    <label>Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>