force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Message__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Message__c</fullName>
    <description>This is used to show the message of logging.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>