force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_ID__c</fullName>
    <description>The &apos;Related Record ID&apos; field represents the unique identifier of a record associated with this event log entry. It helps establish connections between event logs and specific records, making it easier to trace events back to their originating source. This field plays a vital role in simplifying the debugging process and providing essential context for event log analysis.</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>