force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__SessionId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__SessionId__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>