force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Time_Stamp__c</fullName>
    <description>This field is used to record the ending date and time of the event or workflow action that triggered the creation of an Event Log.</description>
    <label>End Time Stamp</label>
    <type>DateTime</type>
</CustomField>