force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__User__c.field-meta.xml
<CustomField>
    <fullName>MUSW__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>