force-app/main/default/objects/MUSW__EventLog__c/listViews/MUSW__Default.listView-meta.xml
<ListView>
    <fullName>MUSW__Default</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Apex_Code_Name__c</columns>
    <columns>MUSW__MessageLong__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Severity__c</columns>
    <columns>MUSW__User__c</columns>
    <columns>MUSW__Time_Stamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>